--- a/scss/_video.scss
+++ b/scss/_video.scss
@@ -10,23 +10,11 @@ $module: 'video';
   z-index: 0;
   transform: translateY(-300px);
   background-color: $black;
-  // opacity: 0;
-  // visibility: hidden;
+  opacity: 1;
+  visibility: visible;
   pointer-events: none;
   cursor: default;
   transition: 1s opacity $ease-out-quint, 0.75s transform $ease-in-out-quart;
-
-  // @media screen and (min-width: $screen-md-min) {
-  //   opacity: 1;
-  //   visibility: visible;
-  // }
-  //
-  // &--visible {
-  //   @media screen and (min-width: $screen-md-min) {
-  //     opacity: 1 !important;
-  //     visibility: visible !important;
-  //   }
-  // }
 
   /* ==========================================================================
   Elements
